Fixed bundling issue by setting baseURL to 'src' in package.json under jspm.directories section

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <div id='app'></div>
+
     <script src="jspm_packages/system.js"></script>
     <script src="js/jspm.config.js"></script>
+
     <script>
       var prod = false;
-      System.import('js/app');
+      System.import('js/app.js');
     </script>
   </body>
 </html>
