folder structure change v1

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <body>
     <div id='app'></div>
 
-    <script src="jspm_packages/system.js"></script>
-    <script src="js/jspm.config.js"></script>
+    <script src="lib/jspm_packages/system.js"></script>
+    <script src="lib/jspm.config.js"></script>
 
     <script>
       var prod = false;
-      System.import('js/app.js');
+      System.import('js/src/app.js');
     </script>
   </body>
 </html>
