[feature] integrate Bootstrap css framework into application

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- page title here -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- page title here -->
     <title>Playing around with ES6 project</title>
   </head>
