[feature] adding router to index.js, change entry js file from app.js -> index.js

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <script>
       var prod = false;
-      System.import('js/src/app.js');
+      System.import('js/src/index.js');
     </script>
   </body>
 </html>
